--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="pt-bracket">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Básico</title>
+</head>
+<body>
+    <h1>Titulo principal</h1>
+    <p>isso aqui e um paragrafo</p>
+</body>
+</html>
