--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Titulo principal</h1>
     <p>isso aqui e um paragrafo</p>
+    <h2>Esse aqui e subtitulo de h1 </h2>
+    <p>aqui seria o conteudo desse subtitulo</p>
+    <p>espero que tenha entendido</p>
 </body>
 </html>
