--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     <h1>Titulo principal</h1>
     <p>isso aqui e um paragrafo</p>
+
     <h2>Esse aqui e subtitulo de h1 </h2>
     <p>aqui seria o conteudo desse subtitulo</p>
     <p>espero que tenha entendido</p>
+    
+<h3>Esse é um subtitulo do subtitulo de h2 </h3>
+<p>aqui vai ficar o conteudo desse tópico</p>
+
 </body>
 </html>
