add mais coisas

--- a/index.html
+++ b/index.html
@@ -7,15 +7,27 @@
     <title>HTML Básico</title>
 </head>
 <body>
-    <h1>Titulo principal</h1>
-    <p>isso aqui e um paragrafo</p>
+    <h1>Titulo principal de nivel h1 </h1>
+    <p>Acima fica o titulo principal da pagina</p>
+     <p>Aqui ficaria todo o conteúdo</p>
+     <p>......</p>
 
-    <h2>Esse aqui e subtitulo de h1 </h2>
-    <p>aqui seria o conteudo desse subtitulo</p>
-    <p>espero que tenha entendido</p>
+    <h2>Esse aqui e um titulo de nivel h2 </h2>
+        <p>Aqui e um subtitulo do h1 </p>
+        <p>Aqui ficaria todo os conteudos do subtitulo do titulo principal</p>
+        <p>.......</p>
     
-<h3>Esse é um subtitulo do subtitulo de h2 </h3>
-<p>aqui vai ficar o conteudo desse tópico</p>
+    <h3>Esse é um titulo de nivel h3  </h3>
+        <p>Aqui e um subtitulo do h2 </p>
+        <p>aqui vai ficar o conteudo desse tópico</p>
+        <p>.....</p>
+
+    <h4>Esse é um subtitulo de h4 </h4>
+        <p>Aqui é um subtitulo de h3</p>
+        <p>Aqui Ficaria todo o contéudo desse tópico</p>
+        <p>........</p>
+
+     <h5>Aqui e o subtitulo de nivel h5 </h5>
 
 </body>
 </html>
