--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
         <p>Aqui Ficaria todo o contéudo desse tópico</p>
         <p>........</p>
 
-     <h5>Aqui e o subtitulo de nivel h5 </h5>
+    <h5>Aqui e o subtitulo de nivel h5 </h5>
+        <p>Aqui e um subtitulo de h4</p>
+        <p>Aqui Ficaria todo o contéudo desse tópico</p>
+        <p>.....</p>
 
+     <h6>Aqui em um subtitulo de nivel h6 </h6>
+        <p>Aqui em um subtitulo de h5</p>
+        <p>Aqui Ficaria todo o contéudo desse tópico</p>
+        <p>.....</p>
+        
 </body>
 </html>
