--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HTML Básico</title>
 </head>
 <body>
+    <p>Aqui nessa página Vamos mostrar com são as hieraquias de titulos</p>
     <h1>Titulo principal de nivel h1 </h1>
     <p>Acima fica o titulo principal da pagina</p>
      <p>Aqui ficaria todo o conteúdo</p>
@@ -32,11 +33,12 @@
         <p>Aqui Ficaria todo o contéudo desse tópico</p>
         <p>.....</p>
 
-     <h6>Aqui em um subtitulo de nivel h6 </h6>
+    <h6>Aqui em um subtitulo de nivel h6 </h6>
         <p>Aqui em um subtitulo de h5</p>
         <p>Aqui Ficaria todo o contéudo desse tópico</p>
         <p>.....</p>
         <p>ola</p>
+    <footer>@Edyvhan 5anto5</footer>
 
 </body>
 </html>
