fazendo outra pagina

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <p>Aqui em um subtitulo de h5</p>
         <p>Aqui Ficaria todo o contéudo desse tópico</p>
         <p>.....</p>
+        <p><a href="file:///C:/Users/eu/Desktop/HTML-B%C3%A1sico/Html_Basico/lista.html">ir Para Lista</a></p>
        
     <footer>@Edyvhan 5anto5</footer>
 
