--- a/lista.html
+++ b/lista.html
@@ -9,5 +9,16 @@
 <body>
     <h1>Tipos de Listas</h1>
     <p>Agora Vamos da inicios em uma parte da HTML que são as listas </p>
+    <p>primeiramente vamos falar de Listas Ordenadas</p>
+    <ul>
+        <li>ovos</li>
+        <li>leite</li>
+        <li>sal</li>
+        <li>mantega</li>
+        <li>açucar</li>
+        <li>Massa de trigo</li>
+        <li>Fermento</li>
+        <li>fogo</li>
+    </ul>
 </body>
 </html>
